<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--reviews label-->
        <TextView
            android:id="@+id/reviews_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:paddingBottom="12dp"
            android:text="@string/reviews_label"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

        <!--button for previous review-->
        <ImageView
            android:id="@+id/btn_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/btn_prev_content_description"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:src="@drawable/btn_arrow"
            android:scaleX="-1.15"
            android:scaleY="1.15"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reviews_label" />

        <!--index for which review is being shown-->
        <TextView
            android:id="@+id/tv_index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/btn_previous"
            app:layout_constraintTop_toBottomOf="@id/reviews_label"
            tools:text="1" />

        <TextView
            android:id="@+id/tv_of"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/of"
            app:layout_constraintLeft_toRightOf="@id/tv_index"
            app:layout_constraintTop_toBottomOf="@id/reviews_label"
            tools:text="of" />

        <!--displays total number of reviews-->
        <TextView
            android:id="@+id/tv_review_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/tv_of"
            app:layout_constraintTop_toBottomOf="@id/reviews_label"
            tools:text="7" />

        <!--button for next review-->
        <ImageView
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/btn_next_content_description"
            android:paddingLeft="16dp"
            android:paddingRight="0dp"
            android:src="@drawable/btn_arrow"
            android:scaleX="1.15"
            android:scaleY="1.15"
            app:layout_constraintLeft_toRightOf="@id/tv_review_count"
            app:layout_constraintTop_toBottomOf="@id/reviews_label" />

        <!--author label-->
        <TextView
            android:id="@+id/review_author_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:paddingTop="8dp"
            android:text="@string/author_label"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_previous" />

        <!--author name-->
        <TextView
            android:id="@+id/review_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:paddingTop="8dp"
            app:layout_constraintLeft_toRightOf="@id/review_author_label"
            app:layout_constraintTop_toBottomOf="@id/btn_next"
            tools:text="John Doe" />

        <!--review-->
        <TextView
            android:id="@+id/review_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/review_author_label"
            tools:text="Wow! Amazing movie! I was blown away by the special effects." />

    </android.support.constraint.ConstraintLayout>

</layout>